--- a/task.yaml
+++ b/task.yaml
@@ -10,22 +10,23 @@ node:
     - mac
 
 steps:
+  # steps are completed sequentially
   - type: clone
-    repo: "@{repo}"
+    url: "git@github.com:/alagyn/tubular-tests.git"
     branch: "@{branch}"
 
-  - display: Build the thing
+  - display: Exec shell
     type: script
     lang: shell
-    script: >
+    script: |
       # this is my shell script
-      cmake -S . -B build
-      cmake --build build
+      echo "testing testing 1 2 3"
+      rm -f output.txt
 
-  - display: whatever
+  - display: exec myScript
     type: exec
-    target: "@{workspace}/script.sh"
+    target: "tubular-tests/myScript.sh"
 
   # copy build to artifact dir
   - type: archive
-    target: "@{workspace}/build/bin"
+    target: "@{workspace}/output.txt"
