--- a/myPipeline.yaml
+++ b/myPipeline.yaml
@@ -12,6 +12,6 @@ stages:
     tasks:
       - myTask
 
-  - display: upload the thing
-    tasks:
-      - upload
+  #- display: upload the thing
+    #tasks:
+      #- upload
