update task archiving

--- a/myTask.yaml
+++ b/myTask.yaml
@@ -29,3 +29,6 @@ steps:
   # copy build to artifact dir
   - type: archive
     target: "@{workspace}/output.txt"
+
+  - type: archive
+    target: "@{workspace}/myFolder"
